// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InactiveNotificationModal renders for a notification with a run currently on break 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Sorry, we can't show you details for run 111 because it is on a scheduled break.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with a run that finished in the past 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Run 222 has ended and is no longer active in Skate.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with a run that has only nonrevenue work left 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Run 222 has ended and is no longer active in Skate.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with multiple current runs 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Sorry, we can't show you details for runs 111, 222 because nobody is logged into them.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with multiple upcoming runs 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Runs 111, 222 are upcoming and not yet active in Skate. Please check back later to see details for these runs.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with no runs 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Sorry, there's no additional information that we can provide you about this notification.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with one current run 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Sorry, we can't show you details for run 111 because nobody is logged into it.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders for a notification with one upcoming run 1`] = `
[
  <div
    className="c-modal-backdrop"
    onClick={[Function]}
  />,
  <div
    aria-modal={true}
    className="c-modal"
    role="dialog"
    tabIndex={-1}
  >
    <div
      className="c-basic-notification-modal"
      role="document"
    >
      <button
        className="c-basic-notification-modal__close-button"
        onClick={[Function]}
        title="Close"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </button>
      <div
        className="c-notification__title"
      >
        Other NOTIFICATION
      </div>
      <div
        className="c-basic-notification-modal__body"
      >
        Run 111 is upcoming and not yet active in Skate. Please check back later to see details for this run.
      </div>
    </div>
  </div>,
]
`;

exports[`InactiveNotificationModal renders loading message 1`] = `"loading..."`;
